--- a/DragonbaneCharacterSheetGenerator/Components/Layout/NavMenu.razor
+++ b/DragonbaneCharacterSheetGenerator/Components/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">DragonbaneCharacterSheetGenerator</a>
+        <a class="navbar-brand" href="">Dragonbane</a>
     </div>
 </div>
 
@@ -14,13 +14,18 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="heroic-abilities">
+                <span class="bi" aria-hidden="true"></span> Heroic Abilities
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+            <NavLink class="nav-link" href="innate-abilities">
+                <span class="bi" aria-hidden="true"></span> Innate Abilities
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="spells">
+                <span class="bi" aria-hidden="true"></span> Spells
             </NavLink>
         </div>
     </nav>
