--- a/DragonbaneCharacterSheetGenerator/Components/Pages/InnateAbilities.razor
+++ b/DragonbaneCharacterSheetGenerator/Components/Pages/InnateAbilities.razor
@@ -7,7 +7,7 @@
  <ChildContent>
  <h1>Innate Abilities</h1>
 
- <p>This page shows the list of innate abilities (grouped by kin) from a local JSON file.</p>
+ <p>This page shows the list of innate abilities (grouped by kin).</p>
 
  <input class="form-control" placeholder="Search abilities by kin, name or description..." @bind="searchTerm" />
 
